Fix squashed map type selectors (use line-height:normal in map)

--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -554,6 +554,10 @@ div.slider-panel {
 	visibility: hidden;
 }
 
+#mapwrap {
+	line-height: normal;
+}
+
 /* Statistics */
 
 div.statistics-section {
